# rust-linux-gsm

./: .env.example  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  README.md
backend/src/: action.rs  command.rs  game_server.rs  main.rs
backend/src/routes/: mod.rs  server_action.rs  status.rs
frontend/: Cargo.toml  README.md
frontend/src/: main.rs
frontend/src/components/: mod.rs
frontend/src/components/buttons/: mod.rs  start_server.rs  stop_server.rs
frontend/src/components/tables/: mod.rs  server_list.rs
frontend/src/routes/: mod.rs  start_server.rs  stop_server.rs
game-servers/: Makefile  README.md  docker-compose.yml
game-servers/volumes/mcserver/: README.md
src/: game_server.rs  main.rs
volumes/: README.md
volumes/gmodserver/: README.md
volumes/l4d2server/: README.md
volumes/mcserver/: README.md
