cargo-features = ["edition2024"]

[package]
name = "simple-lgsm-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
dotenv = "0.15.0"
axum = "0.8.4"
reqwest = { version = "0.12.15", features = ["json"] }
